fixed letter spacing on banner

--- a/css/main.css
+++ b/css/main.css
@@ -127,7 +127,7 @@ footer a:active {
 }
 
 .nd-link a, #provost-link a {
-   letter-spacing: .3rem;
+   letter-spacing: .2rem;
    color: white;
    cursor: pointer;
    text-decoration: none;
